# cpg-assessment

./: .gitignore  Home.py  README.md  cpg_example.py  pyproject.toml  requirements.txt
components/: core_ui.py  cpg_metrics.py  cpg_queries.py  data_analysis.py  data_cleaning.py  data_loader.py  data_loader_backup.py  data_loader_improved.py  data_report.py  overview.py  ui.py  ui_components.py  ui_helpers.py
docs/: Assessment.md  CPG_ANALYSIS_README.md
util/: analysis.py  cleaning.py  cpg_analysis.py  data_quality.py  database.py  prefect_workflows.py  quality_visualizations.py  queries.sql  session_state.py  sql_queries.py  styles.py  utils.py  visualization.py
